[gd_scene load_steps=14 format=4 uid="uid://cbqlnabf4kqlh"]

[ext_resource type="Script" uid="uid://yvtlx0efvpe7" path="res://Code/imp.gd" id="1_l4yk4"]
[ext_resource type="PackedScene" uid="uid://c3vyxg5i5tp4w" path="res://Scenes/imp_ball.tscn" id="2_en6t0"]
[ext_resource type="PackedScene" uid="uid://dljr84rf3j7jf" path="res://Art/models/imp.glb" id="2_l4yk4"]
[ext_resource type="PackedScene" uid="uid://dxyk8dinya2ea" path="res://Scenes/hit sound.tscn" id="2_lfxki"]
[ext_resource type="Material" uid="uid://b7ht42l2ouma" path="res://Art/materials/outline_mat.tres" id="3_fym1r"]
[ext_resource type="PackedScene" uid="uid://c65cvkcv6wbci" path="res://Scenes/imp sound.tscn" id="3_lfxki"]
[ext_resource type="Material" uid="uid://b4w05mso46rct" path="res://Art/materials/color palette/cp1_white_mat.tres" id="4_7ig54"]
[ext_resource type="Material" uid="uid://didtteh2c3noj" path="res://Art/materials/color palette/cp1_navy_mat.tres" id="5_en6t0"]
[ext_resource type="Material" uid="uid://db3hjd18ck77g" path="res://Art/materials/color palette/cp1_red_mat.tres" id="6_lfxki"]

[sub_resource type="CylinderShape3D" id="CylinderShape3D_gwovb"]
height = 1.86816

[sub_resource type="CylinderShape3D" id="CylinderShape3D_5lhyt"]
height = 4.0
radius = 0.75

[sub_resource type="CylinderShape3D" id="CylinderShape3D_7ni53"]
height = 3.0
radius = 8.0

[sub_resource type="ArrayMesh" id="ArrayMesh_wj1ck"]
resource_local_to_scene = true
resource_name = "imp_Cube_003"
_surfaces = [{
"aabb": AABB(-0.447397, 1.38805, 0.0219821, 0.894795, 0.229813, 0.0867916),
"attribute_data": PackedByteArray("AAAAP5CAvz4AABA/FHGmPgAAAD8UcaY+AAAgPwyQ2D4AABA/FHGmPgAAED8MkNg+AAAQPxRxpj4AAAA/FHGmPgAAED8UcaY+AAAAP5CAvz4AACA/DJDYPgAAED8MkNg+AAAAP5CAvz4AACA/FHGmPgAAED8MkNg+AAAAPxRxpj4AAAA/FHGmPgAAAD8UcaY+AAAgPxRxpj4AABA/DJDYPgAAED8MkNg+AAAAPxRxpj4AAAA/DJDYPgAAID8MkNg+AAAgP5CAvz4AACA/kIC/PgAAID8UcaY+AAAAPwyQ2D4AAAA/kIC/PgAAED8MkNg+AAAAPwyQ2D4AACA/DJDYPgAAID+QgL8+AAAgP5CAvz4AACA/FHGmPgAAAD8MkNg+AAAAP5CAvz4AABA/kIC/PgAAED8UcaY+AAAgP5CAvz4AACA/FHGmPjFeDT+QgL8+AAAgPwyQ2D4AAAA/DJDYPgAAED+QgL8+AAAgP5CAvz4AABA/FHGmPgAAID8MkNg+AAAAPwyQ2D4AAAA/kIC/PgAAID8UcaY+MV4NP5CAvz4="),
"bone_aabbs": [AABB(0, 0, 0, -1, -1, -1), AABB(0, 0, 0, -1, -1, -1), AABB(-0.447397, 1.38805, 0.0219821, 0.894795, 0.229813, 0.0867916), AABB(-0.447397, 1.38805, 0.0219821, 0.894795, 0.229813, 0.0867916)],
"format": 34359745559,
"index_count": 288,
"index_data": PackedByteArray("JQANACYADQABACYAJQAnAA0ADQAaAAEAJwAaAA0AGgAEAAEAAQAEAA8AJwAZABoAJgABAAIAAQAPAAIAJgACABUAGgAoAAQAGQAoABoAHAAPAAQAAgAPABwAKQAEACgAHAAEACkAGQAYACgAKQAoABgAKgAZACcAAgAcAAAAFQACAAAAGwAcACkAAAAcABsAGwApAAUABQApABgAAAAbABYAFgAbAAUAFQAAAAwADAAAABYADAAmABUADAAlACYABQAYABcADAAWACsAKwAlAAwAFgAFAA4AKwAWAA4ADgAFABcAKwAUACUAKwAOABQAFAAnACUAFAAqACcAAwAXABgADgAXAAMAFAAOAAMAFAADACoAAwAYABkAKgADABkALAASAC0ALQASACIALAAuABIAHQAsAC0AHQAtAC8ALwAtACEALQAiACEAHQAvAAoALwAhAAoAMAAsAB0AEgAGACIAEgAuAAYAHQAKABMAMAAdABMAEwAKAB8AMAAxACwAMQAuACwAMAATAB4AMQAwAB4AEwAfAAsAHgATAAsACgAgAB8ACwAfACAACgAhACAAMQAHAC4AIQAyACAAIQAiADIACwAgADMAMwAgADIAIgAIADIAMwAyAAgAIgAGAAgAIwALADMAHgALACMAMQAeAAkACQAeACMABwAxAAkAIwAzACQAJAAzAAgACQAjACQAJAAIABAABgAQAAgAEQAJACQABwAJABEAEQAkABAABgARABAALgAHABEALgARAAYA"),
"lods": [0.0316584, PackedByteArray("FAANABUAFAADAA0AFQAWABQAFAAOAAMAFAAWAA4ADgAXAAMAFgAFAA4ADgAFABcAAwAXABgABQAYABcAAwAZAA0AAwAYABkADQAZABoAGwAYAAUAFgAbAAUAGQAYAAQAGQAEABoADQAaAAEAGgAEAAEADQABABUAAAAbABYAFQAAABYAGwAcABgAHAAEABgAAAAcABsAAQAEAA8AHAAPAAQAFQABAAIAAQAPAAIAFQACAAAAAgAPABwAAgAcAAAAHQAHABIABwAdAB4AHQASAAoAEgAHAAYAHQATAB4AHQAKABMAEwAKAB8AHgATAAsAEwAfAAsACgAgAB8ACwAfACAACgASACEACgAhACAAEgAiACEAEgAGACIAIQAiAAgAIgAGAAgAIQAIACAABgAQAAgAIwALACAAHgALACMAJAAgAAgAJAAIABAAIwAgACQABgARABAAEQAkABAABwARAAYACQAjACQACQAeACMAEQAJACQABwAeAAkABwAJABEA"), 0.0492103, PackedByteArray("DAANAAIADgANAAwAAgAAAAwADAAAAA4ADQABAAIAAgAPAAAAAQAPAAIAAAAFAA4AAAAPAAUAAQAEAA8ABQAPAAQADQADAAEADgADAA0AAwAEAAEADgAFAAMAAwAFAAQABgAQAAgACwAIABAACgAIAAsACgAGAAgABgARABAAEgAGAAoAEQAJABAACQALABAABwARAAYABwAJABEAEgAHAAYACQATAAsAEwAKAAsABwATAAkAEwASAAoAEwAHABIA"), 0.0704518, PackedByteArray("AAABAAIAAwABAAAAAQAEAAIAAwAEAAEAAgAEAAAAAwAFAAQAAAAEAAUAAAAFAAMABgAHAAgABwAJAAgACgAHAAYABwAKAAkACgAGAAgACQALAAgACgAIAAsACQAKAAsA")],
"material": ExtResource("4_7ig54"),
"name": "horns",
"primitive": 3,
"skin_data": PackedByteArray("AwACAAAAAADjyhs1AAAAAAMAAgAAAAAAy8ozNQAAAAADAAIAAAAAAN7KIDUAAAAAAwACAAAAAACxyk01AAAAAAMAAgAAAAAAs8pLNQAAAAADAAIAAAAAALPKSzUAAAAAAwACAAAAAADLyjM1AAAAAAMAAgAAAAAAEsvsNAAAAAADAAIAAAAAALPKSzUAAAAAAwACAAAAAADjyhs1AAAAAAMAAgAAAAAAscpNNQAAAAADAAIAAAAAALPKSzUAAAAAAwACAAAAAAA+y8A0AAAAAAMAAgAAAAAAWcqlNQAAAAADAAIAAAAAAM/KLzUAAAAAAwACAAAAAACzyks1AAAAAAMAAgAAAAAAs8pLNQAAAAADAAIAAAAAAN7KIDUAAAAAAwACAAAAAABZyqU1AAAAAAMAAgAAAAAAz8ovNQAAAAADAAIAAAAAAA3L8TQAAAAAAwACAAAAAAASy+w0AAAAAAMAAgAAAAAA4MoeNQAAAAADAAIAAAAAALPKSzUAAAAAAwACAAAAAACzyks1AAAAAAMAAgAAAAAAp8pXNQAAAAADAAIAAAAAALDKTjUAAAAAAwACAAAAAAC0yko1AAAAAAMAAgAAAAAAs8pLNQAAAAADAAIAAAAAAA3L8TQAAAAAAwACAAAAAADgyh41AAAAAAMAAgAAAAAAs8pLNQAAAAADAAIAAAAAALPKSzUAAAAAAwACAAAAAACnylc1AAAAAAMAAgAAAAAAsMpONQAAAAADAAIAAAAAALTKSjUAAAAAAwACAAAAAACzyks1AAAAAAMAAgAAAAAAyco1NQAAAAADAAIAAAAAAPfKBzUAAAAAAwACAAAAAADaySQ2AAAAAAMAAgAAAAAAs8pLNQAAAAADAAIAAAAAALPKSzUAAAAAAwACAAAAAABjyps1AAAAAAMAAgAAAAAAGMvmNAAAAAADAAIAAAAAAMnKNTUAAAAAAwACAAAAAADaySQ2AAAAAAMAAgAAAAAA98oHNQAAAAADAAIAAAAAAGPKmzUAAAAAAwACAAAAAAAYy+Y0AAAAAAMAAgAAAAAAPsvANAAAAAADAAIAAAAAALPKSzUAAAAAAwACAAAAAACzyks1AAAAAA=="),
"uv_scale": Vector4(0, 0, 0, 0),
"vertex_count": 52,
"vertex_data": PackedByteArray("7v2WPiSEtD9CeYQ9BziOPrZmuz+YNNw9w8yVPolEtT9RYtY9dW+FPu4mwT/8HgM99A3ePi4Mzj/VZ5I99M3dPun0zT9xzDw9BziOvrZmuz+YNNw9XqtkvjF6sj9BvNs99A3evi4Mzj/VZ5I97v2WviSEtD9CeYQ9dW+Fvu4mwT/8HgM99M3dvun0zT9xzDw9/5RfPpCrsT8TZoo9+5RFPh2Rvj/Yxsw9lr+MPkJHuz/kE7Q8EaLhPicrzT+OKIg9EaLhvicrzT+OKIg9w8yVvolEtT9RYtY9+5RFvh2Rvj/Yxsw9lr+MvkJHuz/kE7Q8wy5OPqBKuD9TUtc8XqtkPjF6sj9BvNs90hOUPolEtT//vMw8NefYPmMmzj/cpVc997PYPhUWzz9jY3A931KEPuAUwj+0SoQ9kkGGPnVbwT/pbMc9l2jhPtsbzT+ALFI9SBHlPs5WzT+DsW89wy5OvqBKuD9TUtc80hOUvolEtT//vMw8NefYvmMmzj/cpVc997PYvhUWzz9jY3A931KEvuAUwj+0SoQ9kkGGvnVbwT/pbMc9l2jhvtsbzT+ALFI9SBHlvs5WzT+DsW89o4NGPn7ztz91/Yo9axNRPjZouD/GxN49r00+Porivj82Boo9cOXYPoY0zj95T4U9zw/hPsvqzj/rQG89wfBDPpZcvj/c0g09fDlhPjF6sj+/JOI8o4NGvn7ztz91/Yo9r00+vorivj82Boo9axNRvjZouD/GxN49wfBDvpZcvj/c0g09fDlhvjF6sj+/JOI8/5RfvpCrsT8TZoo9cOXYvoY0zj95T4U9zw/hvsvqzj/rQG89PrVJM////78ZiXeJ////P2qhZlX///8/KzCp6v///78rldGhAjRz21fg3e1eIljU5XZ3if///z/NlbtJ8K3G2NNq0aH8y4skwEpJM////7/Tz6nq////v6cf3e2g3aYrilgbKegpbSwkUNOgVbQEB8v4Mf3///+/UcB7eMRcHNetP3t4OqPiKJReZlX///8/2q/ToKlL+vgzBzH9////v7sMyTV8ZaEOMWq7SQ5SOCcz1PYd////v+81kO1nOaHISWBD4sgorbJGV67Y////v5ptB7P///8/0PVKO3A58/CK+RV1kIby+EPzyTWCml3xyyv2Hf///78PypDtl8ZdN7WfQ+I211FNuKiu2P///79kkgez////Py4KSjuOxgsPdAYVdW55DAfCILpiUl+1DspNYXQFWYYPoTB5r9Wu4hi9bz259QIJ0eaxldFhKtbbfR8czRaJ0xn7NVgZHzFyGTzfumKsoEnxXc95rylRHOc0smF0+aZ48IHgHM3odivmA8pYGd/OjOZ0pxspFtaR00GQPbkJ/fUuGE6V0Z3VKCQ=")
}, {
"aabb": AABB(-0.412029, 0.0616306, -0.235733, 0.824059, 1.11879, 0.483406),
"attribute_data": PackedByteArray("wji2Pvp31z6bE4A+tKeuPpausD74Obw+WSW2PjQW9j7RBoA+QBv4PsI4tj76d9c+lq6wPvg5vD5ZJbY+NBb2PtEGgD5AG/g+mxOAPrSnrj5ZJbY+NBb2PpsTgD60p64+lq6wPvg5vD6WrrA++Dm8PtEGgD5AG/g+0QaAPkAb+D6WrrA++Dm8PpausD74Obw+lq6wPvg5vD7COLY++nfXPpausD74Obw+wji2Pvp31z5ZJbY+NBb2Plkltj40FvY+lq6wPvg5vD7COLY++nfXPlkltj40FvY+aji2PlAD2D5ZJbY+NBb2PpausD74Obw+wji2Pvp31z6WrrA++Dm8PpsTgD60p64+WSW2PjQW9j5ZJbY+NBb2PpsTgD60p64+wji2Pvp31z6WrrA++Dm8PtEGgD5AG/g+WSW2PjQW9j5qOLY+UAPYPsI4tj76d9c+WSW2PjQW9j6WrrA++Dm8Plkltj40FvY+0QaAPkAb+D6bE4A+tKeuPpausD74Obw+ETi2PqiO2D5ZJbY+NBb2PpausD74Obw+mxOAPrSnrj64N7Y+/hnZPhE4tj6ojtg+mxOAPrSnrj5ZJbY+NBb2Prg3tj7+Gdk+lq6wPvg5vD6SAoA+gFjWPmA3tj5Updk+0QaAPkAb+D5ZJbY+NBb2PtEGgD5AG/g+WSW2PjQW9j5gN7Y+VKXZPg=="),
"bone_aabbs": [AABB(-0.209039, 0.0616306, -0.123739, 0.418078, 0.55973, 0.261768), AABB(-0.412029, 0.407926, -0.235733, 0.824059, 0.612669, 0.483406), AABB(-0.412029, 0.581074, -0.235733, 0.824059, 0.599342, 0.483406), AABB(-0.412029, 0.901944, -0.235733, 0.824059, 0.278472, 0.483406)],
"format": 34359745559,
"index_count": 360,
"index_data": PackedByteArray("AAASAAIAAgASAAsAAgALAAEABgABAAsAAAAeABIAAwAeAAAABgALAB8ABQAGAB8AEgAgAAsAHwALACAAHgAYABIAEgAYACAAAwAhAB4ABAAhAAMAHgAZABgAIQAZAB4AGAAJACAAHwAgABQAFAAgAAkABQAfABMAEwAfABQABwAFABMAGQANABgAGAANAAkABwATACIABAAHACIAEwAUABUAIgATABUAFAAJAAwAFQAUAAwADQAjAAkADAAJACMABAAiAAgABAAIACEAIgAVABYACAAiABYAFQAMACQAFgAVACQADAAjACUAJAAMACUACAAaACEAIQAaABkACAAWACYACAAmABoAFgAkACcAJgAWACcAJAAlACgAJwAkACgAGgApABkAGQApAA0AJgAXABoAGgAXACkAJgAnAA4AJgAOABcAJwAoACoADgAnACoAKQArAA0ADQArACMAFwAbACkAKQAbACsADgAsABcAFwAsABsADgAqAC0ADgAtACwAKwAuACMAJQAjAC4AGwAvACsAKwAvAC4ALAAwABsAGwAwAC8ALQAxACwALAAxADAAJQAuADIAKAAlADIALwAzAC4AMgAuADMAMAAQAC8ALwAQADMAMQA0ADAAMAA0ABAAKAAyADUAKgAoADUAMgAzABEANQAyABEAEAA2ADMAEQAzADYANAAdABAAEAAdADYAKgA1ADcALQAqADcANQARADgANwA1ADgAEQA2ADkAOAARADkAOgA2AB0AOgA5ADYAOAA5ADsAOgA7ADkANwA4AAoACgA4ADsALQA3ADwAPAA3AAoALQA8ADEACgA7AD0APgA7ADoAPgA9ADsADwAKAD0ADwA9AD4APAAKAA8APAA/ADEAPAAPAD8AMQA/ADQADwA+ABwADwAcAD8APgBAABwAPwAcAEAAPwBAADQAPgA6AEAANABAAB0AOgAdAEAA"),
"lods": [0.151753, PackedByteArray("AAASAAIAAwASAAAAAgASAAsAAgALAAEABgABAAsABQAGAAsABQALABMABwAFABMABwATAAgAAwAIABIABAAHAAgABAAIAAMAEgAJAAsAEwALABQACwAJABQAEwAUABUACAATABUAFQAUAAwAFAAJAAwACAAVABYAFgAVAAwACAAWAA4AFgAMAA4ACAAOABcAEgAYAAkAEgAZABgACAAZABIAGQAJABgACAAaABkACAAXABoAGgAXABkAGQAXAAkAFwAbAAkAGwAQAAkADAAJABAAFwAPABsADgAPABcADwAQABsADgAMAAoADwAOAAoADAAQABEADAARAAoADwAcABAADwAKABwAEQAQAB0AHQAKABEAEAAcAB0AHAAKAB0A"), 0.169072, PackedByteArray("AAALAAIAAgALAAEABgABAAsAAwALAAAABQAGAAsAAwAIAAsABAAIAAMABAAHAAgABwAFAAgABQALAAwACAAFAAwACAANAAsACwANAAwACAAOAA0ACAAMAA4ADgAPAA0ADAANABAADwAQAA0ADwAOAAoADgAMAAoADwAKABAADAARAAoAEAAKABEADAAQABEA"), 0.322193, PackedByteArray("AAABAAIAAwABAAAAAwAIAAEABAAIAAMABAAHAAgABwAFAAgABQAGAAEAAQAJAAUACAAFAAkACAAJAAEACAAKAAkACAAJAAoA"), 0.448796, PackedByteArray("AAABAAIAAwABAAAAAwAEAAEABAAFAAEABQAGAAEABwAFAAQA")],
"material": ExtResource("5_en6t0"),
"name": "body",
"primitive": 3,
"skin_data": PackedByteArray("AwACAAAAAACQt25IAAAAAAMAAgAAAAAAKLnWRgAAAAADAAIAAAAAALe7R0QAAAAAAwACAAAAAAAMu/JEAAAAAAMAAgAAAAAAVL6qQQAAAAADAAIAAAAAAOm3FUgAAAAAAwACAAAAAADduyFEAAAAAAMAAgAAAAAAprtYRAAAAAACAAMAAAAAAAXj+RwAAAAAAQACAAAAAABvs49MAAAAAAAAAAAAAAAA//8AAAAAAAACAAMAAQAAAAPcUiOpAAAAAgABAAAAAACkvlpBAAAAAAIAAQAAAAAAHb/hQAAAAAABAAIAAAAAABbT6CwAAAAAAAAAAAAAAAD//wAAAAAAAAAAAAAAAAAA//8AAAAAAAAAAAAAAAAAAP//AAAAAAAAAgADAAAAAAAC2vwlAAAAAAIAAwAAAAAArddRKAAAAAACAAMAAAAAAIj0dgsAAAAAAgADAAAAAABL87MMAAAAAAIAAwABAAAAOex2EE8DAAACAAEAAAAAAIPVeyoAAAAAAgADAAAAAACd9WEKAAAAAAIAAwAAAAAAi/VzCgAAAAACAAMAAQAAAOXt2w09BAAAAQAAAAIAAACCxcMfuRoAAAAAAAAAAAAA//8AAAAAAAAAAAAAAAAAAP//AAAAAAAAAgADAAAAAAB42IYnAAAAAAIAAwAAAAAAwNk+JgAAAAACAAEAAwAAAEzN0SzgBQAAAgADAAAAAABs1ZIqAAAAAAIAAwAAAAAAHdPhLAAAAAABAAAAAgAAAGDgPx9eAAAAAgABAAAAAABA174oAAAAAAEAAAACAAAA28cyHvEZAAACAAEAAwAAAFDqnA8RBgAAAgABAAAAAAB01YoqAAAAAAEAAAACAAAApcXGH5MaAAACAAEAAAAAAMDYPicAAAAAAQAAAAIAAABsyaIc7xkAAAEAAAACAAAAxccwHggaAAABAAAAAgAAAF/JoRz+GQAAAQAAAAIAAADH54gXrgAAAAAAAQAAAAAAhOd6GAAAAAAAAAEAAAAAADbfyCAAAAAAAAABAAAAAAAM4PIfAAAAAAAAAQAAAAAAqN5WIQAAAAAAAAEAAAAAADTfyiAAAAAAAAAAAAAAAAD//wAAAAAAAAAAAAAAAAAA//8AAAAAAAAAAAEAAAAAAAng9R8AAAAAAAAAAAAAAAD//wAAAAAAAAAAAQAAAAAApt5YIQAAAAAAAAAAAAAAAP//AAAAAAAAAAAAAAAAAAD//wAAAAAAAAAAAAAAAAAA//8AAAAAAAAAAAAAAAAAAP//AAAAAAAAAAABAAAAAAAm7NgTAAAAAAAAAAAAAAAA//8AAAAAAAAAAAAAAAAAAP//AAAAAAAAAAAAAAAAAAD//wAAAAAAAAAAAAAAAAAA//8AAAAAAAA="),
"uv_scale": Vector4(0, 0, 0, 0),
"vertex_count": 65,
"vertex_data": PackedByteArray("DNYZPtw9lT8Zob87AAAAAE+Tjj8E7/I9b0sLPqFelD+Aspw9DtANPuAXlz/2b5W9AAAAAO8skz+ksdW9DNYZvtw9lT8Zob87b0sLvqFelD+Aspw9DtANvuAXlz/2b5W9AAAAAH88hz+ksdW9AAAAALcUQT+8D/c9qB4svgIqfj7N2au9AAAAAN6igj8E7/I9b0sLviHuSz9B4Jo9b0sLPiHuSz9B4Jo9AAAAAFF7Rj/3b9W9AAAAAGLQdT4JbPO9CpopPjJDez4szK49CpopvjJDez4szK49b0sLPi9uiD+Aspw9DNYZvmtNiT8Zob87ZgTSvsLbdT/yFTU+9h7SvjuBeD/OK9s7g/XSvlX1gD8vhy++DtANPvDUTj/heJm9ZgTSPsLbdT/yFTU+9h7SPjuBeD/OK9s7g/XSPlX1gD8RZHG+HOQoPn5MHT/7oWE72zg2PldwfD0b+rG9PbQzPldwfD0lcLU9DNYZPmtNiT8Zob87b0sLvi9uiD+Aspw9AAAAANPlZj/unX0+DtANPm8niz/2b5W9DtANvm8niz/2b5W9AAAAAErBFD+I9/89DNYZvvt4TD8rypg7omUVvlrkHD86hKE9AAAAAET5fj9k21m+DtANvvDUTj/heJm9HOQovn5MHT/7oWE7DNYZPvt4TD8rypg7QeoXvnURHz8xmZ+9omUVPlrkHD86hKE9QeoXPnURHz8xmZ+9AAAAAD7OGD+obt+9AAAAALzb0D6qbwQ+1n8fPia12z4zKKg9K/I3PgFA3D60rxE7dAQiPvWb3j5+uaW91n8fvia12z4zKKg9AAAAAMdpcD6Q4wg+OwBHPgzOez7aeoM6K/I3vgFA3D60rxE7AAAAAFdwfD11Vw0+dAQivvWb3j5+uaW9OwBHvgzOez7aeoM6PbQzvldwfD0lcLU9AAAAAFdwfD0eZRW7Sg5WvldwfD3uTmO5AAAAAFZC1j5Ybem92zg2vldwfD0b+rG9AAAAAFdwfD26av29qB4sPgIqfj7N2au9Sg5WPldwfD3uTmO5IsvtRP///7//f40/////P1CwGUX///8/DcrqJv///78HywAA////v9w07UT///+/rk8ZRf///z/xNeom////vy4z9P3///+//3/qXP///z+6BEjFQHb7hP9/nq3///8/31EbWP///z8frhtY////P9cYVgL///+/nvz//////79EvJSE9XaC+7pDlIQJiXwE06Lsqv///z/UPKez////P+86JIb///8/nwu5h////z/WEKO/////vxjazSb///+/D8Ukhv///z/t8tKI////P4bxusP///+/APX8h7F36fsd1PYnHcNZy8CoqlMUyrbezcPzs////z8rXeyq////P/9/Pnf///8/yMwP2////78CMYXa////v/9/tIP///8/iyq4UeWqr5bEQLiE+IiIBE4VFfr///+/gyJdKGeSi5r+CvyH0nchhPbUFFKwVF5p5gQ2wseJyQQ6v7iEBnd2+xj7NsI3djX7nvz//////7//f6qD////P6a9pYQEd3/7d/UTiJl34vsw+83D////v1hCpYT6iH8E/3+kg////z8Q9iqIQ4jBe4cKE4hliBwE/3/TRXn/hb/OBMzD34nUBO4JKoh8iCEEPleqU////z//fwAA2AT/PwE4vEhwS7gdnvz//////7/hK/Yn////v6PEAADF9oa9RPtIxb6JA3v9x7xIjrRG4g==")
}, {
"aabb": AABB(-0.238233, 0, -0.201489, 0.476467, 1.59003, 0.534984),
"attribute_data": PackedByteArray("AQDAPv//Hz8AAMA+AAAAPwAAID8AAAA/AAAgPwAAAD8AAMA+AAAAP5ausD74Obw+wji2Pvp31z5ZJbY+NBb2PgEAgD7+//8+0QaAPkAb+D5ZJbY+NBb2PsI4tj76d9c+lq6wPvg5vD4AACA/AACAPgAAwD4AAIA+mxOAPrSnrj4AACA/AACAPgAAwD4AAIA+AQAAP///Hz8AAEA/DJDYPgAAAD8UcaY+AQDAPhRxpj4BAAA/+P//PQAAgD4UcaY+AQDAPhRxpj4AAAA/FHGmPjjakD6Aevc+KDCPPtzfsj5gN7Y+VKXZPigwjz7c37I+ONqQPoB69z5gN7Y+VKXZPigwjz7c37I+KDCPPtzfsj4BAAA//v//PgEAAD/+//8+AAAgPxRxpj4AAEA/FHGmPgAAAD8MkNg+AAAgPxRxpj4BAEA//P9/PgEAAD8AAIA+AQAgP/j//z0BAAA/AACAPgAAAD8MkNg+5tyQPihf1z5ZJbY+NBb2Plkltj40FvY+5tyQPihf1z6WrrA++Dm8Pigwjz7c37I+lq6wPvg5vD5ZJbY+NBb2PubckD4oX9c+WSW2PjQW9j7m3JA+KF/XPpausD74Obw+KDCPPtzfsj6WrrA++Dm8PgEAID///x8/AAAgPwyQ2D4AACA/DJDYPgEAQD/+//8+AgDAPgyQ2D4CAMA+DJDYPgEAgD78/38+AQDAPvj//z042pA+gHr3Plkltj40FvY+ONqQPoB69z7m3JA+KF/XPmA3tj5Updk+YDe2PlSl2T6WrrA++Dm8Pigwjz7c37I+lq6wPvg5vD6WrrA++Dm8Pigwjz7c37I+ONqQPoB69z5ZJbY+NBb2PjjakD6Aevc+5tyQPihf1z5gN7Y+VKXZPmA3tj5Updk+lq6wPvg5vD4oMI8+3N+yPpausD74Obw+lq6wPvg5vD4oMI8+3N+yPg=="),
"bone_aabbs": [AABB(-0.160429, 0, -0.0639959, 0.320858, 0.0616406, 0.194627), AABB(0, 0, 0, -1, -1, -1), AABB(-0.238233, 1.11357, -0.201489, 0.476467, 0.238233, 0.461718), AABB(-0.238233, 1.11357, -0.201489, 0.476467, 0.476467, 0.534984)],
"format": 34359745559,
"index_count": 456,
"index_data": PackedByteArray("EgACADsAEgA7AAMAEgAiAAIAAAAiABIAEgADACMAAAASACMAAAABACIAAAAjAAQAIgA8AAIAIwADAD0AAQAsACIAIgAsADwAAgA8ABMAAwATAD0AAgATAD4AAwA+ABMAIwA9ACYABAAjACYAPQATACUAPAAlABMAJgA9ACcAPQAlACcAPAAkACUALAAkADwAJwAlACgAJAAoACUAJwAoAA0AJAAQACgAJgAnABQAFAAnAA0APwAmABQABAAmAD8AFAANACkACwAEAD8ACwAKAAQACgAIAAQADAALAD8ACgAJAAgABwAIAAkABwABAAgABgABAAcADAA/ABUAPwAUABUAFQAUACkADwAMABUAKQANACoABgBAAAEAAQBAACwABQBAAAYADwAYAAUABQAYAEAAQAAZACwAQAAYABkALAAZACQAGQAQACQAGQArABAAGAArABkAKwAqABAADwAXABgADwAVABcAGAARACsAFwARABgAKwAWACoAEQAWACsAFwBBABEAEQBCABYAFwAOAEEAFwAVAA4ADgAWAEIAKQAqABYAFQApAA4ADgApABYAQwBEAC4AQwBFAEQARQAcAEQALgBEABwAQwAuAC8ARQAtABwARgBFAEMARgAtAEUAQwAvABoARgBDABoALgBHAC8AGgAvAEcALgAcAEgALgBIAEcALQBJABwASAAcAEkARgAaADAAGgBHADAASgAtAEYASgBGADAAMABHAEsASABLAEcAMABLAB0ASgAwAB0ASAAxAEsAMQAdAEsAMQBKAB0ASABJADEAMQAyAEoALQAbAEkASgAbAC0ASQBMADEAMQBMADIAGwAzAEkASQAzAEwASgBNABsASgAyAE0AGwBNADMATABNADIATAAzAE0ATgBPAFAAUABPAB8ATgA0AE8ANAAfAE8ATgA2ADQAUAAfADUAUQBOAFAAUQBQADUAUQAeAE4ATgAeADYANAA2AFIAHgBSADYANABTAB8ANABSAFMANQAfAFQAUwBUAB8AUQA3AB4AHgA3AFIAVQBRADUAVQA3AFEAUwBSAFYANwBWAFIANwAhAFYAVQAhADcAUwBWADgAOABWACEAOAAhAFUAUwA4AFQAOABVADkANQBUACAAVQA1ACAAVAA4AFcAOAA5AFcAIABUADoAVABXADoAVQAgAFgAVQBYADkAIAA6AFgAVwA5AFgAVwBYADoA"),
"lods": [0.0522684, PackedByteArray("EgAiAAIAEgACAAMAAAAiABIAAAASACMAEgADACMAAAABACIAAAAjAAQAAwACABMAIgAkAAIAAgAkABMAAwATACUAJAAlABMAIwADACYABAAjACYAAwAlACcAJgADACcAJwAlACgAJAAoACUAJwAoAA0AJAAQACgAJgAnABQAFAAnAA0AFQAmABQABAAmABUAFAANACkAFQAUACkAKQANACoACwAEABUACwAKAAQACgAIAAQADAALABUACgAJAAgABwAIAAkADwAMABUABwABAAgABgABAAcABgAYAAEABQAYAAYADwAYAAUADwAVABcADwAXABgAFwAVAA4AFQApAA4AFwAOABEAFwARABgADgApABYADgAWABEAKQAqABYAEQAWACsAKwAWACoAGAARACsAKwAqABAAGQArABAAGAArABkAGQAQACQAGAAZACwALAAZACQAAQAYACwAIgAsACQAAQAsACIAGgAtAC4AGgAuAC8AGgAvADAAMAAtABoAMAAvAB0ALgAxAC8AMQAdAC8AMgAwAB0AMgAtADAAMQAyAB0ALQAcAC4ALgAcADEAMgAbAC0ALQAbABwAMQAbADIAGwAzABwAHAAzADEAMQAzABsAHgA0ADUAHgA2ADQAHgA3ADYANwAeADUANwAhADYANAA2ADgAOAA2ACEAOQAhADcAOQA3ADUAOAAhADkANQA0AB8ANAA4AB8AOQA1ACAAOAA5ACAANQAfACAAHwA4ADoAOAAgADoAIAAfADoA"), 0.0646768, PackedByteArray("AAACABIAAAASAAQAAAABAAIAEgACAAMAEgADAAQAAwACABMAAgAQABMAAwATAA0ADQATABAAFAADAA0ABAADABQAFAANAA4ADgANABAABAAUABUAFQAUAA4ADgAQABYACwAEABUACwAKAAQADAALABUACgAIAAQACgAJAAgABwAIAAkADwAMABUABwABAAgABgABAAcADwAVABcAFwAVAA4ADwAXABgABgAYAAEADwAYAAUABQAYAAYAFwAOABEAFwARABgADgAWABEAEQAWABAAGAARABkAGQARABAAAQAYABkAAgAZABAAAQAZAAIAGgAbABwAHAAbAB0AHQAbABoAHAAdABoAHgAfACAAHwAhACAAIQAeACAAHwAeACEA"), 0.109461, PackedByteArray("AAABAAIAAAACAAMAAAADAAQAAQAFAAIABgAFAAEABgABAAcABwABAAgABwAIAAkACgAJAAgACgAIAAQACwAKAAQACwAEAAwABAADAAwADAADAA0AAwACAA0ADAANAA4ADwAMAA4ADQACABAADQAQAA4AAgAFABAADwAOABEADwARAAUAEQAOABAABQARABAA")],
"material": ExtResource("6_lfxki"),
"name": "skin",
"primitive": 3,
"skin_data": PackedByteArray("AwACAAAAAAAP0u8tAAAAAAMAAgAAAAAA8M4OMQAAAAADAAAAAAAAAP//AAAAAAAAAwAAAAAAAAD//wAAAAAAAAMAAgAAAAAAVc+pMAAAAAADAAIAAAAAALe7R0QAAAAAAwACAAAAAACQt25IAAAAAAMAAgAAAAAADLvyRAAAAAADAAIAAAAAAA/S7y0AAAAAAwACAAAAAABUvqpBAAAAAAMAAgAAAAAAprtYRAAAAAADAAIAAAAAAOm3FUgAAAAAAwACAAAAAADduyFEAAAAAAMAAAAAAAAA//8AAAAAAAADAAIAAAAAAGDtnhIAAAAAAwACAAAAAAAoudZGAAAAAAMAAAAAAAAA//8AAAAAAAADAAIAAAAAAFftpxIAAAAAAwACAAAAAAAz9csKAAAAAAMAAAAAAAAA//8AAAAAAAADAAIAAAAAANb7KAQAAAAAAwACAAAAAAAS3uwhAAAAAAMAAAAAAAAA//8AAAAAAAADAAIAAAAAACTL2jQAAAAAAwACAAAAAAD73QMiAAAAAAMAAgAAAAAAx/s3BAAAAAAAAAAAAAAAAP//AAAAAAAAAAAAAAAAAAD//wAAAAAAAAAAAAAAAAAA//8AAAAAAAAAAAAAAAAAAP//AAAAAAAAAAAAAAAAAAD//wAAAAAAAAAAAAAAAAAA//8AAAAAAAAAAAAAAAAAAP//AAAAAAAAAAAAAAAAAAD//wAAAAAAAAMAAgAAAAAAAfL9DQAAAAADAAIAAAAAABry5A0AAAAAAwAAAAAAAAD//wAAAAAAAAMAAAAAAAAA//8AAAAAAAADAAIAAAAAACX12QoAAAAAAwAAAAAAAAD//wAAAAAAAAMAAAAAAAAA//8AAAAAAAADAAAAAAAAAP//AAAAAAAAAwAAAAAAAAD//wAAAAAAAAMAAAAAAAAA//8AAAAAAAADAAIAAAAAAAP1+woAAAAAAAAAAAAAAAD//wAAAAAAAAAAAAAAAAAA//8AAAAAAAAAAAAAAAAAAP//AAAAAAAAAAAAAAAAAAD//wAAAAAAAAAAAAAAAAAA//8AAAAAAAAAAAAAAAAAAP//AAAAAAAAAAAAAAAAAAD//wAAAAAAAAAAAAAAAAAA//8AAAAAAAAAAAAAAAAAAP//AAAAAAAAAAAAAAAAAAD//wAAAAAAAAAAAAAAAAAA//8AAAAAAAAAAAAAAAAAAP//AAAAAAAAAAAAAAAAAAD//wAAAAAAAAAAAAAAAAAA//8AAAAAAAADAAAAAAAAAP//AAAAAAAAAwAAAAAAAAD//wAAAAAAAAMAAAAAAAAA//8AAAAAAAADAAAAAAAAAP//AAAAAAAAAwACAAAAAAA2z8gwAAAAAAMAAgAAAAAA+M4GMQAAAAADAAIAAAAAAInsdRMAAAAAAwACAAAAAACJ7HUTAAAAAAAAAAAAAAAA//8AAAAAAAAAAAAAAAAAAP//AAAAAAAAAAAAAAAAAAD//wAAAAAAAAAAAAAAAAAA//8AAAAAAAAAAAAAAAAAAP//AAAAAAAAAAAAAAAAAAD//wAAAAAAAAAAAAAAAAAA//8AAAAAAAAAAAAAAAAAAP//AAAAAAAAAAAAAAAAAAD//wAAAAAAAAAAAAAAAAAA//8AAAAAAAAAAAAAAAAAAP//AAAAAAAAAAAAAAAAAAD//wAAAAAAAAAAAAAAAAAA//8AAAAAAAAAAAAAAAAAAP//AAAAAAAAAAAAAAAAAAD//wAAAAAAAAAAAAAAAAAA//8AAAAAAAAAAAAAAAAAAP//AAAAAAAAAAAAAAAAAAD//wAAAAAAAAAAAAAAAAAA//8AAAAAAAAAAAAAAAAAAP//AAAAAAAAAAAAAAAAAAD//wAAAAAAAAAAAAAAAAAA//8AAAAAAAA="),
"uv_scale": Vector4(0, 0, 0, 0),
"vertex_count": 89,
"vertex_data": PackedByteArray("AAAAAGQrlD8MTQO+dyMjPl+jmD9dGr+9dyMjPj5swT9bGr+9dyMjvj5swT9bGr+9dyMjvl+jmD9dGr+9b0sLPqFelD+Aspw9DNYZPtw9lT8Zob87DtANPuAXlz/2b5W9AAAAAGQrlD8MTQO+AAAAAO8skz+ksdW9DtANvuAXlz/2b5W9DNYZvtw9lT8Zob87b0sLvqFelD+Aspw9diMjvj5swT/AuWY+dyMjvmCjmD/AuWY+AAAAAE+Tjj8E7/I9diMjPj5swT/AuWY+dyMjPmCjmD/AuWY+AAAAAM4HrT8YU06+AAAAANOzyj/k6Qu8evNzvs4HrT87AxM+jZw4vj30lT9zvAQ+AAAAAM4HrT/Uv6o+AAAAAF+Jjj86AxM+jZw4Pj30lT9zvAQ+evNzPs4HrT87AxM+NG48PVdwfD1MEIO9NG48PQAAAAA7O5M9ckckPgAAAADLhFc6NG48PVdwfD07O5M9NG48vVdwfD1MEIO9ckckvgAAAADLhFc6NG48vQAAAAA7O5M9NG48vVdwfD07O5M9VONGPs4HrT8NTQO+VONGvs4HrT8NTQO+jZw4PmAbxD9zvAQ+AAAAAD6Gyz86AxM+I2Btvs4HrT/p6Qu8jZw4vmAbxD9zvAQ+AAAAADnkxT/OPIU+VeNGvs4HrT/PPIU+AAAAADnkxT/OPIU+VeNGPs4HrT/PPIU+I2BtPs4HrT/p6Qu8NG48PQAAAAAAAACAB94RPgGtHj1K/km9B94RPldwfD1K/km9NG48PVdwfD0AAACAM2kQPgGtHj1OwlU9fMMnPQGtHj0XxAU+RkcNPgAAAADfGwM+B94RvgGtHj1K/km9NG48vQAAAAAAAACAB94RvldwfD1K/km9NG48vVdwfD0AAACAM2kQvgGtHj1OwlU9fMMnvQGtHj0XxAU+RkcNvgAAAADfGwM+AAAAADnkxT8MTQO+a3o1Phy3wz+HOZ87a3o1vhy3wz+HOZ87AAAAADnkxT8MTQO+a3o1voFYlj+HOZ87a3o1PoFYlj+HOZ87AAAAAGQrlD/OPIU+AAAAAGQrlD/OPIU+NG48PQGtHj1MEIO9B94RPgAAAABK/km9NG48PQAAAABMEIO9NG48PQGtHj0AAACAckckPldwfD3LhFc6ckckPgGtHj3LhFc6M2kQPgAAAABOwlU9NG48PQGtHj07O5M9M2kQPldwfD1OwlU9RkcNPgGtHj3fGwM+fMMnPQAAAAAXxAU+NG48vQGtHj1MEIO9B94RvgAAAABK/km9NG48vQAAAABMEIO9NG48vQGtHj0AAACAckckvldwfD3LhFc6ckckvgGtHj3LhFc6M2kQvgAAAABOwlU9NG48vQGtHj07O5M9M2kQvldwfD1OwlU9RkcNvgGtHj3fGwM+fMMnvQAAAAAXxAU+JL8AAA47JAR31JMrT8B05X/Uf9Q4Ub7ffyt/1MauQCCHK5Mrrz+KGlCwGUVfzcneIsvtRCKzqOANyuomPMW90CS/AACHAm89B8sAAB4IEznxNeomwjpBL9w07UTcTFYfrk8ZRZ8yNSFsVZKq9r/kGmxVbFWoUfgf/3+NPzUZvTmSqpKqCEAa5ZKqbFVWrgbg/////4mGRAOBkf//k/4vRYUQ/39neWwAs0XcRaZBeiD/f/9/dXlEA/9/+xBnAUhFS7rcRVi+hN957/9/l4aS/zAqVtgI4K4hkj/FPRHDcJ/CxVpGV7br4HJZFKrQxMYxztVW2PYfUN48OlpGp0kTH2zAxT3tPI5gjKYUqi47OM7//06+mHQ4/QAATr5mi8YCTLpMuo5B1t7/f3nvtv/nPgAAgZG1hnUAskVMunC+KCH/fx/AcvZtNt8//39fdOYC/38fwEDEIwQfwP9/n4sY/f//gZFJeYn//z//Pzq+4aD//zLG////v+XSkdoZxpFL/z//vzq+4iCyxSST////P91TQqr///8/PqoQVf///z8AADLG////v/+//z/EQR1fGS2R2uU5bbT/v/+/xEEc30w6JJP///8/IaxCqv///z/AVRBV////P06+////f9ggaMZoxmNCPN+WOWjGm73CIE6+//9I/7pApTkmOrRAMSBZxiY6Sr/N3/9/3z8OAA1A/3/fP/9/ECAAANbE////v+XSbSUZxpHLMCqoJwjgrqEAAP9/////v8LFpLlXtuxg7v7/f////z+itr9BgciZ35s2IZ////8/CaZwrRLhUF0+qu6q////P91TvFX///8////WxP///78ZLW0l5TltNM7VqCf2H1Be////f////788OqS5p0kSnxAB/3////8/XEm/QX03ZSBjySGf////P/VZcK3sHq6iwFXuqv///z8hrLxV////Pw==")
}]
blend_shape_mode = 0

[node name="Imp" type="CharacterBody3D" node_paths=PackedStringArray("mesh")]
script = ExtResource("1_l4yk4")
hit_sound = ExtResource("2_lfxki")
imp_bolt_scene = ExtResource("2_en6t0")
mesh = NodePath("imp2/imp skeleton/Skeleton3D/imp")
attack_sound = ExtResource("3_lfxki")

[node name="CollisionShape3D" type="CollisionShape3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.911621, 0)
shape = SubResource("CylinderShape3D_gwovb")

[node name="Hitbox" type="Area3D" parent="." groups=["Enemy"]]

[node name="CollisionShape3D" type="CollisionShape3D" parent="Hitbox"]
shape = SubResource("CylinderShape3D_5lhyt")

[node name="NavigationAgent3D" type="NavigationAgent3D" parent="."]
path_desired_distance = 0.5

[node name="Attack Range" type="Area3D" parent="."]

[node name="CollisionShape3D" type="CollisionShape3D" parent="Attack Range"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.835938, 0)
shape = SubResource("CylinderShape3D_7ni53")
debug_color = Color(0.995163, 0, 0.210026, 0.42)

[node name="imp2" parent="." instance=ExtResource("2_l4yk4")]
transform = Transform3D(-1, 0, -8.74228e-08, 0, 1, 0, 8.74228e-08, 0, -1, 0, 0, 0)

[node name="Skeleton3D" parent="imp2/imp skeleton" index="0"]
bones/0/position = Vector3(0, 0.142393, 0)
bones/0/rotation = Quaternion(0.143568, 0.0200451, 0.0335926, 0.988867)
bones/1/rotation = Quaternion(-0.099152, -0.0143115, -0.023256, 0.994698)
bones/2/rotation = Quaternion(-0.0875026, -0.0111537, -0.0201647, 0.995898)
bones/3/rotation = Quaternion(0.198921, 0.0113659, 0.0138613, 0.979852)

[node name="imp" parent="imp2/imp skeleton/Skeleton3D" index="0"]
material_overlay = ExtResource("3_fym1r")
mesh = SubResource("ArrayMesh_wj1ck")

[node name="AnimationPlayer" parent="imp2" index="1"]
speed_scale = 2.0

[node name="RayCast3D" type="RayCast3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.4919, 0)
target_position = Vector3(0, 0, -8)
debug_shape_thickness = 5

[node name="Bolt Point" type="Node3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.38189, -0.289928)

[connection signal="body_entered" from="Attack Range" to="." method="_on_attack_body_entered"]
[connection signal="body_entered" from="Attack Range" to="." method="_on_attack_range_body_entered"]
[connection signal="body_exited" from="Attack Range" to="." method="_on_attack_range_body_exited"]

[editable path="imp2"]
